--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
     <h2>What level do you already own?</h2>
     <div id="needed"></div>
     <button onclick="calculate()">Calculate</button>
-    <h2 id="name">Fridge</h2>
+    <h2 id="name"></h2>
     <div class="results">
-      <div id="rune1">Poison Rune<br>15</div>
-      <div id="rune2">Poison Rune<br>15</div>
+      <div id="rune1"><br></div>
+      <div id="rune2"><br></div>
     </div>
   </body>
   <script src="./script.js"></script>
