--- a/index.html
+++ b/index.html
@@ -24,4 +24,6 @@
     </div>
   </body>
   <script src="./script.js"></script>
+  <script src="template.js"></script>
+  <script src="db.js"></script>
 </html>
